Bug 881995 - Snapped view Alignment for Bookmarks an Recent History is off and tiles are cut off
UltraBlame original commit: d1140bb49990d9b7496004491539d82c1b85393a

--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -3979,6 +3979,66 @@ viewstate
 snapped
 "
 ]
+{
+padding
+-
+top
+:
+0
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+snapped
+"
+]
+.
+meta
+-
+section
+-
+title
+#
+start
+-
+container
+[
+viewstate
+=
+"
+snapped
+"
+]
+richgrid
+{
+margin
+-
+top
+:
+metro_spacing_xnormal
+;
+padding
+:
+0
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+snapped
+"
+]
 .
 meta
 -
