--- a/browser/metro/theme/tiles.css
+++ b/browser/metro/theme/tiles.css
@@ -1889,4 +1889,25 @@ opacity
 0
 ;
 }
+.
+tile
+-
+content
+{
+left
+:
+0
+;
+right
+:
+0
+;
+}
+richgriditem
+{
+width
+:
+auto
+;
+}
 }
